Blender crash when we close the render window if we have selected Blener File in Outliner. #64483

Closed
opened 2019-05-11 13:04:23 +02:00 by Luis Miguel Pérez González · 17 comments

System Information
Operating system: Windows-10-10.0.17134 64 Bits
Graphics card: GeForce GTX 1070/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 399.01

Blender Version
Broken: version: 2.80 (sub 61), branch: blender2.7, commit date: 2019-05-10 22:48, hash: b1af682001
Worked: (optional)

Short description of error
Blender crash when we close the render window if we have selected Blener File in Outliner.

Exact steps for others to reproduce the error

  1. Open blender
  2. In Outliner select Blender File (in "Type of information to display")
  3. Press F12
  4. Closes the render window
  5. Blender crash
  • I didn't include .blend file because of the simple steps. Thanks!
**System Information** Operating system: Windows-10-10.0.17134 64 Bits Graphics card: GeForce GTX 1070/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 399.01 **Blender Version** Broken: version: 2.80 (sub 61), branch: blender2.7, commit date: 2019-05-10 22:48, hash: `b1af682001` Worked: (optional) **Short description of error** Blender crash when we close the render window if we have selected Blener File in Outliner. **Exact steps for others to reproduce the error** 1. Open blender 2. In Outliner select Blender File (in "Type of information to display") 3. Press F12 4. Closes the render window 5. Blender crash * I didn't include .blend file because of the simple steps. Thanks!

Added subscriber: @Wilson-14

Added subscriber: @Wilson-14
Member

Added subscriber: @nacioss

Added subscriber: @nacioss
Member

I can't reproduce the issue in Ubuntu 18.04.2 using the 2019-05-13 2.8 build

I can't reproduce the issue in Ubuntu 18.04.2 using the 2019-05-13 2.8 build

I tried it with today's Blender and the problem continues. hash: a5b5bd2c24 (2019-05-14 00:25)
Is there anything you can do?

I tried it with today's Blender and the problem continues. hash: `a5b5bd2c24` (2019-05-14 00:25) Is there anything you can do?
Member

Does it still happen also if you do Load Factory Settings?

Does it still happen also if you do Load Factory Settings?

it also closes (Load Factory Setting).

it also closes (Load Factory Setting).

Added subscriber: @ZedDB

Added subscriber: @ZedDB

Does this happen with the latest nvidia drivers? The ones you posted a quite old by now.

Does this happen with the latest nvidia drivers? The ones you posted a quite old by now.

I updated the drivers and downloaded the current Blender. These are my new data:

Operating system: Windows-10-10.0.17134 64 Bits
Graphics card: GeForce GTX 1070/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 430.86
Broken: version: 2.80 (sub 74), branch: blender2.7, commit date: 2019-06-10 23:38, hash: a0608340ae

I also did the same tests on another computer:
Operating system: Windows-10-10.0.17134 64 Bits
Graphics card: GeForce GTX 960M/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 388.57
Broken: version: 2.80 (sub 74), branch: blender2.7, commit date: 2019-06-10 23:38, hash: a0608340ae

With the driver update nothing changed.
But since several versions ago I noticed a difference.
In both computers the same thing happens:

Blender doesn't crash:

  1. I put the cursor in the Editor Outliner (Type of information to display: Blender File)
  2. Press F12
  3. I close the Render window
  4. I do everything possible so that blender crash... and does not crash! :)

Blender crash:

  1. I put the cursor on an editor other than the Editor Outliner (Type of information to display: Blender File)
  2. Press F12
  3. I close the Render window
  4. If I enter the Outliner Editor with the mouse, Blender crash. :(
I updated the drivers and downloaded the current Blender. These are my new data: Operating system: Windows-10-10.0.17134 64 Bits Graphics card: GeForce GTX 1070/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 430.86 Broken: version: 2.80 (sub 74), branch: blender2.7, commit date: 2019-06-10 23:38, hash: `a0608340ae` I also did the same tests on another computer: Operating system: Windows-10-10.0.17134 64 Bits Graphics card: GeForce GTX 960M/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 388.57 Broken: version: 2.80 (sub 74), branch: blender2.7, commit date: 2019-06-10 23:38, hash: `a0608340ae` With the driver update nothing changed. But since several versions ago I noticed a difference. In both computers the same thing happens: Blender doesn't crash: 1. I put the cursor in the Editor Outliner (Type of information to display: Blender File) 2. Press F12 3. I close the Render window 4. I do everything possible so that blender crash... and does not crash! :) Blender crash: 1. I put the cursor on an editor other than the Editor Outliner (Type of information to display: Blender File) 2. Press F12 3. I close the Render window 4. If I enter the Outliner Editor with the mouse, Blender crash. :(

Added subscriber: @dr.sybren

Added subscriber: @dr.sybren

I can reproduce this with Blender 516afd0162 on Linux.

I can reproduce this with Blender 516afd0162cd2e217ec50ce522f87317b73f0088 on Linux.

This issue was referenced by 805cabdf17

This issue was referenced by 805cabdf177af6c71da6239ff3fc5d2524286a18

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sybren A. Stüvel self-assigned this 2019-07-09 11:52:42 +02:00

I did a test and the error continues.
I used today's version. Commit date: 2019-07-08 23:33, hash: `ac8c795429

Can I do something to help? I'll keep an eye out for his answer in case you want I to run some test in Windows

I did a test and the error continues. I used today's version. Commit date: 2019-07-08 23:33, hash: `ac8c795429 Can I do something to help? I'll keep an eye out for his answer in case you want I to run some test in Windows

Your build it too old, wait for tomorrows build.

Your build it too old, wait for tomorrows build.

I tried it today and it's perfect.
Thank you very much for the hard work.

I tried it today and it's perfect. Thank you very much for the hard work.

Thanks for confirming it's fixed.

Thanks for confirming it's fixed.
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
5 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#64483
No description provided.